# alx-low_level_programming

./: CMakeLists.txt  README.md  mamameaw
0x00-hello_world/: README.md
0x01-variables_if_else_while/: 1-last_digit.c  README.md
0x02-functions_nested_loops/: 1-alphabet.c  2-print_alphabet_x10.c  3-islower.c  4-isalpha.c  5-sign.c  6-abs.c  7-print_last_digit.c
0x03-debugging/: .0-main.c.swp  0-main.c  README.md
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  2-strlen.c  3-puts.c  4-print_rev.c  5-rev_string.c  README.md
0x06-pointers_arrays_strings/: README.md
0x07-pointers_arrays_strings/: 0-memset.c  1-memcpy.c  101-crackme_password  2-strchr.c  3-strspn.c  4-strpbrk.c  5-strstr.c  7-print_chessboard.c  8-print_diagsums.c  README.md
0x08-recursion/: README.md
0x09-static_libraries/: 0-strcat.c  100-atoi.c  2-strchr.c  3-strspn.c
0x0A-argc_argv/: README.md  _putchar.c
0x0B-malloc_free/: README.md
0x0C-more_malloc_free/: 101-mul.c  README.md
0x0D-preprocessor/: README.md
0x0E-structures_typedef/: README.md  dog.h
0x0F-function_pointers/: 0-print_name.c  1-array_iterator.c  2-int_index.c  3-calc.h  3-get_op_func.c  3-main.c  README.md  function_pointers.h
0x10-variadic_functions/: README.md
0x12-singly_linked_lists/: 0-print_list.c  1-list_len.c  100-first.c  101-hello_holberton.c  101-hello_holberton.s  2-add_node.c  3-add_node_end.c  4-free_list.c  README.md  lists.h
0x13-more_singly_linked_lists/: README.md
0x14-bit_manipulation/: 2-get_bit.c  (+8 more)
MyPrintf/: CMakeLists.txt  _printf.3  main  main.h.gch
MyPrintf/test/: main.c
(+3 files in other folders)
